chnage somthing and resolve the spacing issues & put the animation

--- a/MyCustomCss/location-page.css
+++ b/MyCustomCss/location-page.css
@@ -3,6 +3,7 @@
     /* font-size: large; */
     font-weight: 700;padding: 20px;
     color: #00723c;
+    text-transform: capitalize;
     /* margin-top: 8%; */
 }
 
